--- a/login.html
+++ b/login.html
@@ -194,9 +194,10 @@ button.enabled:hover{
 <script type="module">
 import { createClient } from 'https://esm.sh/@supabase/supabase-js'
 
+
 const supabase = createClient(
- 'https://srgoshlhsgflszwviwcp.supabase.co',
- 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNyZ29zaGxoc2dmbHN6d3Zpd2NwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjIxMDAzNTQsImV4cCI6MjA3NzQ2MDM1NH0.ge8ziu8qhxJiTd-Th8HWiN-L3S515g0y0WyDBt7T8lA'
+  process.env.SUPABASE_URL,
+  process.env.SUPABASE_SERVICE_ROLE_KEY
 )
 
 const form=document.getElementById('loginForm')
@@ -225,12 +226,21 @@ form.addEventListener('submit',async e=>{
  const password=document.getElementById('password').value.trim()
 
  try{
-  const { data:user } = await supabase
-   .from('usuarios')
-   .select('*')
-   .eq('username',username)
-   .eq('password',password)
-   .maybeSingle()
+  const res = await fetch('test', {
+  method: 'POST',
+  headers: { 'Content-Type': 'application/json' },
+  body: JSON.stringify({ username, password })
+})
+
+if (!res.ok) {
+  const text = await res.text()
+  return show(text)
+}
+
+const data = await res.json()
+sessionStorage.setItem('nomedeusuario', data.username)
+window.location.href = 'gamemodes.html'
+
 
   if(!user) return show('Usuário ou senha incorretos.')
   if(user.acesso_gamemodes!=='permitido') return show('Conta sem permissão.')
