--- a/gamemodes.html
+++ b/gamemodes.html
@@ -193,210 +193,6 @@ header h1{
 
 <div class="gm-container" id="gmContainer">
 
-  <!-- CARD (MODELO QUE VOCÊ PEDIU) -->
-  
-
-       <div class="gm-card">
-    <img src="https://i.imgur.com/VEZmOgO.png" alt="WONDER RPG ® OFICIAL > Sistema VOIP Full + MySQL Completa (100%)" />
-    <h3>WONDER RPG ® OFICIAL > Sistema VOIP Full + MySQL Completa (100%)</h3>
-    <div class="gm-info">
-      <div>Gamemode funciona:</div>
-      <div><strong>optlink:</strong> <span class="status nao">Não</span></div>
-      <div><strong>lemehost:</strong> <span class="status nao">Não</span></div>
-      <div><strong>TCADMIN:</strong> <span class="status nao">Não</span></div>
-      <div><strong>VPS:</strong> <span class="status sim">Sim</span></div>
-    </div>
-    <a href="loginvip.html" target="_blank" rel="noopener noreferrer">Disponivel na pagina VIP!</a>
-  </div>
-
-    <div class="gm-card">
-    <img src="https://i.imgur.com/hjcUVHF.png" alt="GM BRASIL PLAY FLOW COM VOIP" />
-    <h3>GM BRASIL PLAY FLOW COM VOIP!</h3>
-    <div class="gm-info">
-      <div>Gamemode funciona:</div>
-      <div><strong>optlink:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>lemehost:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>TCADMIN:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>VPS:</strong> <span class="status sim">Sim</span></div>
-    </div>
-    <a href="https://dimagratis.online/playflow" target="_blank" rel="noopener noreferrer">Download</a>
-  </div>
-
-
-    <div class="gm-card">
-    <img src="https://i.imgur.com/sDGGUGT.png" alt="GM BRASIL PLAY SHOX 2025" />
-    <h3>GM BRASIL PLAY SHOX 2025 FULL MYSQL!</h3>
-    <div class="gm-info">
-      <div>Gamemode funciona:</div>
-      <div><strong>optlink:</strong> <span class="status nao">Não</span></div>
-      <div><strong>lemehost:</strong> <span class="status nao">Não</span></div>
-      <div><strong>TCADMIN:</strong> <span class="status nao">Não</span></div>
-      <div><strong>VPS:</strong> <span class="status sim">Sim</span></div>
-    </div>
-    <a href="https://dimagratis.com/shox2025" target="_blank" rel="noopener noreferrer">Download</a>
-  </div>
-
-
-    <div class="gm-card">
-      <img src="https://i.imgur.com/DVQFy52.png" alt="GM OS CRIAS ROLEPLAY 2025" />
-      <h3>GM OS CRIAS ROLEPLAY 2025</h3>
-       <div class="gm-info">
-      <div>Gamemode funciona:</div>
-      <div><strong>optlink:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>lemehost:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>TCADMIN:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>VPS:</strong> <span class="status sim">Sim</span></div>
-    </div>
-      <a href="https://dimagratis.online/oscriasrp2025" target="_blank" rel="noopener noreferrer">Download</a>
-    </div>
-
-
-    <div class="gm-card">
-      <img src="https://i.imgur.com/RxyJOm6.png" alt="GM BRASIL PLAY STARK" />
-      <h3>GM BRASIL PLAY STARK</h3>
-      <div class="gm-info">
-      <div>Gamemode funciona:</div>
-      <div><strong>optlink:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>lemehost:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>TCADMIN:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>VPS:</strong> <span class="status sim">Sim</span></div>
-    </div>
-      <a href="https://dimagratis.online/starksiqueirax" target="_blank" rel="noopener noreferrer">Download</a>
-    </div>
-
-    <div class="gm-card">
-      <img src="https://i.imgur.com/Mf59jK0.png" alt="GM BRASIL PLAY STARS" />
-      <h3>GM BRASIL PLAY STARS V1.0 2025</h3>
-       <div class="gm-info">
-      <div>Gamemode funciona:</div>
-      <div><strong>optlink:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>lemehost:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>TCADMIN:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>VPS:</strong> <span class="status sim">Sim</span></div>
-    </div>
-      <a href="https://dimagratis.online/bstars2025v1" target="_blank" rel="noopener noreferrer">Download</a>
-    </div>
-
-    <div class="gm-card">
-      <img src="https://i.postimg.cc/2yF8Mgmq/thumb-gm.png" alt="GM REDE PARADOX 2025" />
-      <h3>GM REDE PARADOX 2025</h3>
-       <div class="gm-info">
-      <div>Gamemode funciona:</div>
-      <div><strong>optlink:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>lemehost:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>TCADMIN:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>VPS:</strong> <span class="status sim">Sim</span></div>
-    </div>
-      <a href="https://dimagratis.online/redeparadox2025" target="_blank" rel="noopener noreferrer">Download</a>
-    </div>
-
-    <div class="gm-card">
-      <img src="https://i.postimg.cc/MGN7pfB7/mqdefault.jpg" alt="GM NATAL" />
-      <h3>GM ESPECIAL DE NATAL 2024</h3>
-       <div class="gm-info">
-      <div>Gamemode funciona:</div>
-      <div><strong>optlink:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>lemehost:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>TCADMIN:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>VPS:</strong> <span class="status sim">Sim</span></div>
-    </div>
-      <a href="https://dimagratis.online/natal2024" target="_blank" rel="noopener noreferrer">Download</a>
-    </div>
-
-    <div class="gm-card">
-      <img src="https://i.postimg.cc/4yJmfXWv/mqdefault.webp" alt="GM OS CRIAS" />
-      <h3>GM OS CRIAS</h3>
-       <div class="gm-info">
-      <div>Gamemode funciona:</div>
-      <div><strong>optlink:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>lemehost:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>TCADMIN:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>VPS:</strong> <span class="status sim">Sim</span></div>
-    </div>
-      <a href="https://dimagratis.com/oscsiqueirax" target="_blank" rel="noopener noreferrer">Download</a>
-    </div>
-
-    <div class="gm-card">
-      <img src="https://i.postimg.cc/htxg5HrK/mqdefault-1.jpg" alt="GM SHOX" />
-      <h3>GM BRASIL PLAY SHOX 2024</h3>
-       <div class="gm-info">
-      <div>Gamemode funciona:</div>
-      <div><strong>optlink:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>lemehost:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>TCADMIN:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>VPS:</strong> <span class="status sim">Sim</span></div>
-    </div>
-      <a href="https://dimagratis.com/Shoxgm2024" target="_blank" rel="noopener noreferrer">Download</a>
-    </div>
-
-    <div class="gm-card">
-      <img src="https://i.imgur.com/vg1KsIU.jpeg" alt="GM SIQUEIRA" />
-      <h3>GM Brasil Play Siqueira</h3>
-       <div class="gm-info">
-      <div>Gamemode funciona:</div>
-      <div><strong>optlink:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>lemehost:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>TCADMIN:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>VPS:</strong> <span class="status sim">Sim</span></div>
-    </div>
-      <a href="https://dimagratis.com/Brasilplaysiqueira0" target="_blank" rel="noopener noreferrer">Download</a>
-    </div>
-
-    <div class="gm-card">
-      <img src="https://i.imgur.com/VV7JsZb.jpeg" alt="GM RPG" />
-      <h3>GM Siqueira RPG</h3>
-       <div class="gm-info">
-      <div>Gamemode funciona:</div>
-      <div><strong>optlink:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>lemehost:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>TCADMIN:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>VPS:</strong> <span class="status sim">Sim</span></div>
-    </div>
-      <a href="https://dimagratis.online/siqueirarpg" target="_blank" rel="noopener noreferrer">Download</a>
-    </div>
-
-    <div class="gm-card">
-      <img src="https://i.imgur.com/OMTiYKN.jpeg" alt="GM PARADISE" />
-      <h3>GM Rede Paradise</h3>
-       <div class="gm-info">
-      <div>Gamemode funciona:</div>
-      <div><strong>optlink:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>lemehost:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>TCADMIN:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>VPS:</strong> <span class="status sim">Sim</span></div>
-    </div>
-      <a href="https://dimagratis.com/rpdsiq01" target="_blank" rel="noopener noreferrer">Download</a>
-    </div>
-
-    <div class="gm-card">
-      <img src="https://i.imgur.com/ZuCjbs1.jpeg" alt="GM STARS RPG" />
-      <h3>GM Brasil Play Stars RPG</h3>
-       <div class="gm-info">
-      <div>Gamemode funciona:</div>
-      <div><strong>optlink:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>lemehost:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>TCADMIN:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>VPS:</strong> <span class="status sim">Sim</span></div>
-    </div>
-      <a href="https://dimagratis.com/brasilplaystars2" target="_blank" rel="noopener noreferrer">Download</a>
-    </div>
-
-    <div class="gm-card">
-      <img src="https://i.imgur.com/weilh4R.jpeg" alt="GM NATAL PARADOX" />
-      <h3>GM Especial de Natal Rede Paradox 2023</h3>
-       <div class="gm-info">
-      <div>Gamemode funciona:</div>
-      <div><strong>optlink:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>lemehost:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>TCADMIN:</strong> <span class="status sim">Sim</span></div>
-      <div><strong>VPS:</strong> <span class="status sim">Sim</span></div>
-    </div>
-      <a href="https://dimagratis.online/rpnatal23" target="_blank" rel="noopener noreferrer">Download</a>
-    </div>
-
-
-  <!-- 👉 cole os outros cards iguais a esse aqui -->
-
 </div>
 
 <div class="footer">
@@ -404,25 +200,46 @@ header h1{
 </div>
 
 <script>
-document.addEventListener("DOMContentLoaded",()=>{
- const user=sessionStorage.getItem("nomedeusuario");
- if(!user){
-  window.location.href="login.html";
-  return;
- }
- document.getElementById("userName").textContent=user;
+document.addEventListener("DOMContentLoaded", async () => {
+  const user = sessionStorage.getItem("nomedeusuario");
+  if (!user) { window.location.href = "login.html"; return; }
+  document.getElementById("userName").textContent = user;
 
- const search=document.getElementById("search");
- const cards=document.querySelectorAll(".gm-card");
+  const gmContainer = document.getElementById("gmContainer");
+  const search = document.getElementById("search");
 
- search.addEventListener("input",()=>{
-  const v=search.value.toLowerCase();
-  cards.forEach(c=>{
-   c.style.display=c.innerText.toLowerCase().includes(v)?"block":"none";
+  function statusSpan(ok){
+    return `<span class="status ${ok ? "sim" : "nao"}">${ok ? "Sim" : "Não"}</span>`;
+  }
+
+  function render(list){
+    gmContainer.innerHTML = list.map(gm => `
+      <div class="gm-card">
+        <img src="${gm.image}" alt="${gm.title}" />
+        <h3>${gm.title}</h3>
+        <div class="gm-info">
+          <div>Gamemode funciona:</div>
+          <div><strong>optlink:</strong> ${statusSpan(!!gm.works?.optlink)}</div>
+          <div><strong>lemehost:</strong> ${statusSpan(!!gm.works?.lemehost)}</div>
+          <div><strong>TCADMIN:</strong> ${statusSpan(!!gm.works?.tcadmin)}</div>
+          <div><strong>VPS:</strong> ${statusSpan(!!gm.works?.vps)}</div>
+        </div>
+        <a href="${gm.link}" target="_blank" rel="noopener noreferrer">${gm.linkText || "Download"}</a>
+      </div>
+    `).join("");
+  }
+
+  const res = await fetch("data/gamemodes.json", { cache: "no-store" });
+  const all = await res.json();
+  render(all);
+
+  search.addEventListener("input", () => {
+    const v = search.value.toLowerCase();
+    render(all.filter(gm => (gm.title || "").toLowerCase().includes(v)));
   });
- });
 });
 </script>
+
 
 </body>
 </html>
