--- a/login.html
+++ b/login.html
@@ -214,7 +214,7 @@ form.addEventListener('submit', async (e) => {
   const password = document.getElementById('password').value.trim()
 
   try {
-    const res = await fetch('.js', {
+    const res = await fetch('login.js', {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       credentials: 'include',
