--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ footer{
 async function fetchUserCount() {
   const el = document.querySelector("#userCount strong")
   try {
-    const r = await fetch("/netlify/functions/stats")
+    const r = await fetch("/.netlify/functions/stats")
     const d = await r.json()
     el.textContent = d.total
   } catch {
@@ -269,14 +269,10 @@ function tempoOnline() {
   document.querySelector("#tempo-online strong").textContent = "desde 2025"
 }
 
-function openVip() {
-  document.getElementById("vipModal").style.display = "flex"
-}
-
 document.addEventListener("DOMContentLoaded", () => {
   fetchUserCount()
   loadDiscord()
   tempoOnline()
-  setTimeout(() => document.getElementById("overlay")?.remove(), 1800)
 })
 </script>
+
