--- a/login.html
+++ b/login.html
@@ -223,7 +223,7 @@ form.addEventListener('submit', async (e) => {
 
 
   if (!res.ok) return show(await res.text())
-  window.location.href = 'gamemodes.html'
+  window.location.href = 'painelsiqueirax.html'
 
 
     if (!res.ok) return show(await res.text())
