--- a/login.html
+++ b/login.html
@@ -223,12 +223,12 @@ form.addEventListener('submit', async (e) => {
 
 
   if (!res.ok) return show(await res.text())
-  window.location.href = 'painelsiqueirax.html'
+  window.location.href = 'login.html'
 
 
     if (!res.ok) return show(await res.text())
 
-    window.location.href = 'gamemodes.html'
+    window.location.href = 'painelsiqueirax.html'
   } catch {
     show('Erro ao conectar ao servidor.')
   }
