--- a/loginvip.html
+++ b/loginvip.html
@@ -194,7 +194,7 @@ formVip.addEventListener('submit', async (e) => {
     }
 
     // sucesso: manda pra página vip
-    window.location.href = 'acessovip.html'
+    window.location.href = 'gamemodesvip.html'
   } catch {
     vipError.textContent = 'Erro ao conectar ao servidor.'
   }
