--- a/painelsiqueirax.html
+++ b/painelsiqueirax.html
@@ -284,7 +284,7 @@ const panel = document.getElementById('panel')
 // valida sessão pelo cookie e pega username
 let me
 try {
-  const r = await fetch("/.netlify/functions/me", { credentials: "include" })
+  const r = await fetch("/.netlify/functions/me", { credentials: "include", cache: "no-store" })
   if (!r.ok) throw new Error()
   me = await r.json()
 } catch {
