--- a/gamemodesvip.html
+++ b/gamemodesvip.html
@@ -254,7 +254,7 @@ document.addEventListener("DOMContentLoaded", async () => {
   // valida sessão pelo cookie e pega username + vip
   let me
   try {
-    const r = await fetch("/.netlify/functions/me", { credentials: "include" })
+    const r = await fetch("/.netlify/functions/me_vip", { credentials: "include", cache: "no-store" })
     if (!r.ok) throw new Error()
     me = await r.json()
   } catch {
