--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ footer{
 <nav class="side-menu side-left">
   <a href="registro.html" class="menu-btn"><i class="fa fa-registered"></i> Registro</a>
   <a href="comprargm.html" class="menu-btn"><i class="fas fa-cart-shopping"></i> Comprar GM</a>
-  <a href="login.html" class="menu-btn"><i class="fas fa-gamepad"></i> Gamemodes</a>
+  <a href="login.html" class="menu-btn"><i class="fas fa-gamepad"></i> Painel SiqueiraX</a>
   <a href="servidores.html" class="menu-btn"><i class="fas fa-server"></i> Servidores</a>
 </nav>
 
