--- a/gamemodesvip.html
+++ b/gamemodesvip.html
@@ -251,10 +251,13 @@ header h1{
 
 <script>
 document.addEventListener("DOMContentLoaded", async () => {
-  // valida sessão pelo cookie e pega username + vip
+  // ✅ valida sessão pelo cookie e checa VIP
   let me
   try {
-    const r = await fetch("/.netlify/functions/me_vip", { credentials: "include", cache: "no-store" })
+    const r = await fetch("/.netlify/functions/me_vip", {
+      credentials: "include",
+      cache: "no-store"
+    })
     if (!r.ok) throw new Error()
     me = await r.json()
   } catch {
@@ -262,7 +265,7 @@ document.addEventListener("DOMContentLoaded", async () => {
     return
   }
 
-  // ✅ bloqueia se não for VIP
+  // ✅ se não for VIP, manda pro login VIP
   if (!me.vip) {
     window.location.href = "loginvip.html"
     return
@@ -278,29 +281,33 @@ document.addEventListener("DOMContentLoaded", async () => {
   }
 
   function render(list){
-  gmContainer.innerHTML = list.map(gm => `
-    <div class="gm-card ${gm.vip ? "vip" : ""}">
-      ${gm.vip ? `<div class="ribbon">VIP</div>` : ``}
-      <img src="${gm.image}" alt="${gm.title}" />
-      <h3>${gm.title}</h3>
-      <div class="gm-info">
-        <div>Gamemode funciona:</div>
-        <div><strong>optlink:</strong> ${statusSpan(!!gm.works?.optlink)}</div>
-        <div><strong>lemehost:</strong> ${statusSpan(!!gm.works?.lemehost)}</div>
-        <div><strong>TCADMIN:</strong> ${statusSpan(!!gm.works?.tcadmin)}</div>
-        <div><strong>VPS:</strong> ${statusSpan(!!gm.works?.vps)}</div>
+    gmContainer.innerHTML = list.map(gm => `
+      <div class="gm-card vip">
+        <img src="${gm.image}" alt="${gm.title}" />
+        <h3>${gm.title}</h3>
+        <div class="gm-info">
+          <div>Gamemode funciona:</div>
+          <div><strong>optlink:</strong> ${statusSpan(!!gm.works?.optlink)}</div>
+          <div><strong>lemehost:</strong> ${statusSpan(!!gm.works?.lemehost)}</div>
+          <div><strong>TCADMIN:</strong> ${statusSpan(!!gm.works?.tcadmin)}</div>
+          <div><strong>VPS:</strong> ${statusSpan(!!gm.works?.vps)}</div>
+        </div>
+        <a href="${gm.link}" target="_blank" rel="noopener noreferrer">${gm.linkText || "Download"}</a>
       </div>
-      <a href="${gm.link}" target="_blank" rel="noopener noreferrer">${gm.linkText || "Download"}</a>
-    </div>
-  `).join("")
-}
+    `).join("")
+  }
 
-
-
+  // ✅ JSON VIP (com cache-buster)
   const res = await fetch(`/gamemodesvip.json?v=${Date.now()}`, { cache: "no-store" })
+  if (!res.ok) {
+    gmContainer.innerHTML = `<div style="padding:1rem;opacity:.9">
+      Não achei <b>gamemodesvip.json</b> (HTTP ${res.status}).
+    </div>`
+    return
+  }
+
   const all = await res.json()
   render(all)
-
 
   search.addEventListener("input", () => {
     const v = search.value.toLowerCase()
@@ -308,6 +315,7 @@ document.addEventListener("DOMContentLoaded", async () => {
   })
 })
 </script>
+
 
 </body>
 </html>
